vocativ-darknet-microsite/client/styles/episodesgallery.scss
@import "shared";

$backgroundColor: $DARKISHGRAY;
$shadowColor: $BLACK;
$scrollBackgroundColor: $BLACK;
$scrollBreakpoint: breakpoint(medium);

$scrollZIndex: 1;

.episodes-mini-gallery {
  background: $backgroundColor;
  box-shadow: 0 -5px 20px rgba($shadowColor, 0.8);

  @include bp-options(height, $episodesGalleryHeights);
  width: 100%;

  // Make it span the whole width of the screen
  position: fixed;
  bottom: 0;
  left: 0;

  &.non-fixed {
    position: absolute;
    width: 100vw;
    left: calc(-50vw + 50%);
  }

  .episodes {
    box-sizing: border-box;
    @include fill-parent;
    padding: 1rem 0 0.5rem;

    display: flex;
    overflow-x: hidden;

    // Mini Gallery should only be scrolled on tablets, phones, etc.
    @include bp($scrollBreakpoint) {
      overflow-x: scroll;
    }

    .gallery-episode {
      height: 100%;
      max-width: 12rem;

      @include bp-options(flex, (
        default: 1 0 130px,
        medium: 1 0 170px
      ))

      display: flex;
      flex-direction: column;

      .image {
        position: relative;

        $mgImageMrgBottom: 0.5rem;
        margin-bottom: $mgImageMrgBottom;
        height: calc(100% - #{$mgImageMrgBottom} - 1em);

        img {
          @include fill-parent;
          object-fit: cover;
        }

        .coming-soon-text {
          display: none;
        }
      }

      .name {
        text-transform: uppercase;
      }

      padding-right: 1.5rem;
      &:first-child { padding-left: 1.5rem; }

      // Coming soon overlay text
      &.coming-soon {
        .image {
          opacity: 0.5;

          .coming-soon-text {
            @include dim(100%);
            @include pin-top-left;
            @include flex-center;

            @include bp-options(font-size, (
              default: 1em,
              medium: 1.2em
            ))
          }
        }
      }
    }
  }

  .scroll {
    height: 100%;
    background: rgba($scrollBackgroundColor, 0.4);

    font-size: 5rem;
    @include flex-vertical-center;

    i.fa { padding: 0.75rem; }
    &.left { @include pin-top-left; }
    &.right { @include pin-top-right; }

    z-index: $scrollZIndex;

    // Hide the scroll arrows when you can scroll by touch-drag
    @include bp($scrollBreakpoint) {
      display: none;
    }
  }

  // Hide the scroll arrows when mouse is out of gallery
  &:not(:hover) {
    .scroll { display: none; }
  }
}

